# credit-risk-mlops

./: .dockerignore  .gitignore  Dockerfile  PROJECT_REPORT.docx  README.md  Test_cases_end2end  dvc.yaml  params.yaml  pyproject.toml  requirements-aws.txt  requirements-dev.txt  requirements.txt  ~$OJECT_REPORT.docx
.github/workflows/: ci.yml
api/: main.py  model_loader.py  preprocessing.py  schemas.py
aws/sagemaker/config/: sagemaker_config.yaml
aws/sagemaker/iam/: sagemaker-execution-policy.json
aws/sagemaker/pipelines/: credit_risk_sagemaker_pipeline.py
aws/sagemaker/scripts/: compare_costs.py  create_endpoint.py  upload_data.py
aws/sagemaker/src/: evaluate.py  inference.py  preprocess.py  train.py
configs/: logging.yaml
data/processed/: schema.json
docs/: AWS_IMPLEMENTATION.md
k8s/base/: README.md  configmap.yaml  deployment-blue.yaml  deployment-green.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  namespace.yaml:Zone.Identifier  networkpolicy.yaml  pdb.yaml  rollback-cronjob.yaml  secret.yaml  service-canary.yaml  service.yaml  serviceaccount.yaml
monitoring/: README.md  alertmanager-config.yaml  prometheus-rules.yaml  servicemonitor.yaml
monitoring/grafana/: datasource.yaml
monitoring/grafana/dashboards/: credit-risk-dashboard.json  credit-risk-dashboard.json:Zone.Identifier
scripts/: docker_build.sh  docker_run.sh
src/credit_risk/: config.py
tests/: test_api.py  test_config.py  test_metrics.py  test_optimize.py  test_preprocess.py  test_schema.py  test_splitter.py  test_train.py  test_validate.py
(+8 files in other folders)
